<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_news"
        android:icon="@drawable/file"
        android:title="@string/title_news" />

    <item
        android:id="@+id/navigation_album"
        android:icon="@drawable/music"
        android:title="@string/title_album" />

    <item
        android:id="@+id/navigation_now_playing"
        android:icon="@drawable/vinyl"
        android:title="@string/title_now_playing" />

    <item
        android:id="@+id/navigation_musicians"
        android:icon="@drawable/network"
        android:title="@string/title_musicians" />

    <item
        android:id="@+id/navigation_tour"
        android:icon="@drawable/planetearth"
        android:title="@string/title_tour" />

</menu>
